# rust-gtk-screen-shoot

./: .gitignore  Cargo.toml  README
data/ui/: app_window.ui  screenshot-dialog.ui
src/: app.ui  application.rs  cli.rs  main.rs
tests/: cli.rs
