[package]
name = "screen_shot"
version = "0.1.0"
authors = ["tommyshem <1952659+tommyshem@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.2"